# image_processor

filters/: blur.h  edge_detection.cpp  filters.h  mosaic.cpp  negative.cpp  negative.h
image_data/: colour.h  image.cpp
image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/filters/: blur.cpp  crop.cpp  crop.h  edge_detection.h  grayscale.cpp  grayscale.h  mosaic.h  sharpening.cpp  sharpening.h
image_processor/image_data/: colour.cpp  image.h
image_processor/parsing/: header_for_bmp.h  parsing_command_line.h
image_processor/reading_and_writing/: reader.cpp
image_processor/tests/: test_blur.cpp  test_colour.cpp  test_crop.cpp  test_edge.cpp  test_negative.cpp  test_sharp.cpp
parsing/: help.h
reading_and_writing/: reader.h
tests/: test_grayscale.cpp  test_image_constructor.cpp  test_mosaic.cpp  test_parsing.cpp
